--- a/DataCleaning.ipynb
+++ b/DataCleaning.ipynb
@@ -2,13 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 145,
    "id": "c06d4def",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore', category=FutureWarning)\n",
+    "warnings.filterwarnings(\"ignore\", message=\"This pattern is interpreted as a regular expression, and has match groups\")\n",
+    "\n",
+    "\n",
     "\n",
     "np.random.seed(42)\n",
     "df = pd.DataFrame({\n",
@@ -26,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 146,
    "id": "440f9153",
    "metadata": {},
    "outputs": [
@@ -48,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 147,
    "id": "4a567e57",
    "metadata": {},
    "outputs": [],
@@ -60,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 148,
    "id": "19e55670",
    "metadata": {},
    "outputs": [],
@@ -72,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 149,
    "id": "0e0ca18d",
    "metadata": {},
    "outputs": [],
@@ -84,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 150,
    "id": "43c60626",
    "metadata": {},
    "outputs": [],
@@ -96,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 151,
    "id": "a15face2",
    "metadata": {},
    "outputs": [],
@@ -109,19 +114,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 152,
    "id": "2e3ada4c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Sandriko\\AppData\\Local\\Temp\\ipykernel_3492\\1922157465.py:4: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
-      "  df['Subscribed'] = df['Subscribed'].fillna(False)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "### 5. Clean 'Subscribed' column to boolean\n",
     "df['Subscribed'] = df['Subscribed'].str.lower().str.strip()\n",
@@ -131,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 153,
    "id": "fff774a1",
    "metadata": {},
    "outputs": [],
@@ -144,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 154,
    "id": "f37b366e",
    "metadata": {},
    "outputs": [],
@@ -156,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 155,
    "id": "ecf0e665",
    "metadata": {},
    "outputs": [],
@@ -170,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 156,
    "id": "5d35deda",
    "metadata": {},
    "outputs": [],
@@ -183,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 157,
    "id": "23339c7d",
    "metadata": {},
    "outputs": [],
@@ -195,18 +191,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 158,
+   "id": "416383c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### 11. Removing unnecessary rows\n",
+    "df['Name'] = df['Name'].str.lower().str.strip()\n",
+    "df['Email'] = df['Email'].str.lower().str.strip()\n",
+    "bad_rows = df[(~df['Email'].str.contains('@')) | (df['Name'] == 'unknown') | (~df['Email'].str.contains('.')) | (~df['Email'].str.contains(r'\\.(com|ru|ge|us)$'))].index\n",
+    "df = df.drop(index=bad_rows)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
    "id": "4aaba50d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "### 11. Sort Values by UserID\n",
+    "### 12. Sort Values by UserID\n",
     "df = df.sort_values('UserID').reset_index(drop=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 160,
    "id": "7890c8c8",
    "metadata": {},
    "outputs": [
@@ -248,7 +258,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>David</td>\n",
+       "      <td>david</td>\n",
        "      <td>35.0</td>\n",
        "      <td>test@domain.com</td>\n",
        "      <td>2021-05-20</td>\n",
@@ -261,22 +271,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Unknown</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>invalidemail</td>\n",
-       "      <td>2021-05-20</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>CANADA</td>\n",
-       "      <td>False</td>\n",
-       "      <td>26528.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>No Notes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
        "      <td>6</td>\n",
-       "      <td>Bob</td>\n",
+       "      <td>bob</td>\n",
        "      <td>40.0</td>\n",
        "      <td>user@example.com</td>\n",
        "      <td>2020-01-01</td>\n",
@@ -288,9 +284,9 @@
        "      <td>Good</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>2</th>\n",
        "      <td>9</td>\n",
-       "      <td>Charlie</td>\n",
+       "      <td>charlie</td>\n",
        "      <td>35.0</td>\n",
        "      <td>test@domain.com</td>\n",
        "      <td>2020-01-01</td>\n",
@@ -302,9 +298,9 @@
        "      <td>No Notes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>3</th>\n",
        "      <td>13</td>\n",
-       "      <td>Eve</td>\n",
+       "      <td>eve</td>\n",
        "      <td>35.0</td>\n",
        "      <td>user@example.com</td>\n",
        "      <td>2022-03-15</td>\n",
@@ -315,34 +311,128 @@
        "      <td>True</td>\n",
        "      <td>Bad</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>25</td>\n",
+       "      <td>eve</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>test@domain.com</td>\n",
+       "      <td>2021-05-20</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>NAN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>59331.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>No Notes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>29</td>\n",
+       "      <td>alice</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>user@example.com</td>\n",
+       "      <td>2020-01-01</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>CANADA</td>\n",
+       "      <td>False</td>\n",
+       "      <td>80184.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>No Notes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>33</td>\n",
+       "      <td>david</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>user@example.com</td>\n",
+       "      <td>2021-05-20</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>CANADA</td>\n",
+       "      <td>False</td>\n",
+       "      <td>52173.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>No Notes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>34</td>\n",
+       "      <td>david</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>user@example.com</td>\n",
+       "      <td>2020-01-01</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>UK</td>\n",
+       "      <td>False</td>\n",
+       "      <td>50359.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>No Notes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>38</td>\n",
+       "      <td>charlie</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>test@domain.com</td>\n",
+       "      <td>2021-05-20</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>True</td>\n",
+       "      <td>72986.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>No Notes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>41</td>\n",
+       "      <td>alice</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>user@example.com</td>\n",
+       "      <td>2021-05-20</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>CANADA</td>\n",
+       "      <td>False</td>\n",
+       "      <td>55515.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Average</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "   UserID     Name   Age             Email SignupDate  Signup_Year  Country  \\\n",
-       "0       1    David  35.0   test@domain.com 2021-05-20         2021   CANADA   \n",
-       "1       4  Unknown  35.0      invalidemail 2021-05-20         2021   CANADA   \n",
-       "2       6      Bob  40.0  user@example.com 2020-01-01         2020      USA   \n",
-       "3       9  Charlie  35.0   test@domain.com 2020-01-01         2020  UNKNOWN   \n",
-       "4      13      Eve  35.0  user@example.com 2022-03-15         2022      USA   \n",
+       "0       1    david  35.0   test@domain.com 2021-05-20         2021   CANADA   \n",
+       "1       6      bob  40.0  user@example.com 2020-01-01         2020      USA   \n",
+       "2       9  charlie  35.0   test@domain.com 2020-01-01         2020  UNKNOWN   \n",
+       "3      13      eve  35.0  user@example.com 2022-03-15         2022      USA   \n",
+       "4      25      eve  40.0   test@domain.com 2021-05-20         2021      NAN   \n",
+       "5      29    alice  35.0  user@example.com 2020-01-01         2020   CANADA   \n",
+       "6      33    david  35.0  user@example.com 2021-05-20         2021   CANADA   \n",
+       "7      34    david  35.0  user@example.com 2020-01-01         2020       UK   \n",
+       "8      38  charlie  35.0   test@domain.com 2021-05-20         2021      USA   \n",
+       "9      41    alice  35.0  user@example.com 2021-05-20         2021   CANADA   \n",
        "\n",
        "   Is_USA  Income_USD$  Subscribed     Notes  \n",
        "0   False      34872.0       False   Average  \n",
-       "1   False      26528.0       False  No Notes  \n",
-       "2    True      46048.0        True      Good  \n",
-       "3   False      45058.0        True  No Notes  \n",
-       "4    True      57039.0        True       Bad  "
+       "1    True      46048.0        True      Good  \n",
+       "2   False      45058.0        True  No Notes  \n",
+       "3    True      57039.0        True       Bad  \n",
+       "4   False      59331.0       False  No Notes  \n",
+       "5   False      80184.0       False  No Notes  \n",
+       "6   False      52173.0        True  No Notes  \n",
+       "7   False      50359.0        True  No Notes  \n",
+       "8    True      72986.0       False  No Notes  \n",
+       "9   False      55515.0       False   Average  "
       ]
      },
-     "execution_count": 171,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "### Result\n",
-    "df.head()"
+    "df.head(10)"
    ]
   }
  ],
