--- a/DataCleaning.ipynb
+++ b/DataCleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 204,
    "id": "c06d4def",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 205,
    "id": "440f9153",
    "metadata": {},
    "outputs": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 206,
    "id": "4a567e57",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 207,
    "id": "19e55670",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 208,
    "id": "0e0ca18d",
    "metadata": {},
    "outputs": [],
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 209,
    "id": "43c60626",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 210,
    "id": "a15face2",
    "metadata": {},
    "outputs": [],
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 211,
    "id": "2e3ada4c",
    "metadata": {},
    "outputs": [],
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 212,
    "id": "fff774a1",
    "metadata": {},
    "outputs": [],
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 213,
    "id": "f37b366e",
    "metadata": {},
    "outputs": [],
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 214,
    "id": "ecf0e665",
    "metadata": {},
    "outputs": [],
@@ -160,38 +160,38 @@
     "### 8. Rename columns\n",
     "df = df.rename(columns={\n",
     "    'User_ID': 'UserID',\n",
-    "    'Signup Date': 'SignupDate'\n",
+    "    'Signup Date': 'Signup_Date',\n",
+    "    'Income': 'Income_USD$',\n",
     "})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 215,
    "id": "5d35deda",
    "metadata": {},
    "outputs": [],
    "source": [
     "### 9. Reorder columns\n",
-    "columns_order = ['UserID', 'Name', 'Age', 'Email', 'SignupDate', 'Signup_Year',\n",
-    "                 'Country', 'Is_USA', 'Income', 'Subscribed', 'Notes']\n",
+    "columns_order = ['UserID', 'Name', 'Age', 'Email', 'Signup_Date', 'Signup_Year',\n",
+    "                 'Country', 'Is_USA', 'Income_USD$', 'Subscribed', 'Notes']\n",
     "df = df[columns_order]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 216,
    "id": "23339c7d",
    "metadata": {},
    "outputs": [],
    "source": [
     "### 10. Round Income \n",
-    "df['Income'] = df['Income'].round()\n",
-    "df.rename(columns=({'Income': 'Income_USD$'}), inplace=True)"
+    "df['Income_USD$'] = df['Income_USD$'].round()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 217,
    "id": "416383c1",
    "metadata": {},
    "outputs": [],
@@ -205,18 +205,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": null,
+   "id": "0f226df4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### 12. Capitalizing names\n",
+    "df['Name'] = df['Name'].str.capitalize()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "4aaba50d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "### 12. Sort Values by UserID\n",
+    "### 13. Sort Values by UserID\n",
     "df = df.sort_values('UserID').reset_index(drop=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 220,
    "id": "7890c8c8",
    "metadata": {},
    "outputs": [
@@ -245,7 +256,7 @@
        "      <th>Name</th>\n",
        "      <th>Age</th>\n",
        "      <th>Email</th>\n",
-       "      <th>SignupDate</th>\n",
+       "      <th>Signup_Date</th>\n",
        "      <th>Signup_Year</th>\n",
        "      <th>Country</th>\n",
        "      <th>Is_USA</th>\n",
@@ -258,7 +269,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>david</td>\n",
+       "      <td>David</td>\n",
        "      <td>35.0</td>\n",
        "      <td>test@domain.com</td>\n",
        "      <td>2021-05-20</td>\n",
@@ -272,7 +283,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>6</td>\n",
-       "      <td>bob</td>\n",
+       "      <td>Bob</td>\n",
        "      <td>40.0</td>\n",
        "      <td>user@example.com</td>\n",
        "      <td>2020-01-01</td>\n",
@@ -286,7 +297,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>9</td>\n",
-       "      <td>charlie</td>\n",
+       "      <td>Charlie</td>\n",
        "      <td>35.0</td>\n",
        "      <td>test@domain.com</td>\n",
        "      <td>2020-01-01</td>\n",
@@ -300,7 +311,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>13</td>\n",
-       "      <td>eve</td>\n",
+       "      <td>Eve</td>\n",
        "      <td>35.0</td>\n",
        "      <td>user@example.com</td>\n",
        "      <td>2022-03-15</td>\n",
@@ -314,7 +325,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>25</td>\n",
-       "      <td>eve</td>\n",
+       "      <td>Eve</td>\n",
        "      <td>40.0</td>\n",
        "      <td>test@domain.com</td>\n",
        "      <td>2021-05-20</td>\n",
@@ -328,7 +339,7 @@
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>29</td>\n",
-       "      <td>alice</td>\n",
+       "      <td>Alice</td>\n",
        "      <td>35.0</td>\n",
        "      <td>user@example.com</td>\n",
        "      <td>2020-01-01</td>\n",
@@ -342,7 +353,7 @@
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>33</td>\n",
-       "      <td>david</td>\n",
+       "      <td>David</td>\n",
        "      <td>35.0</td>\n",
        "      <td>user@example.com</td>\n",
        "      <td>2021-05-20</td>\n",
@@ -356,7 +367,7 @@
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>34</td>\n",
-       "      <td>david</td>\n",
+       "      <td>David</td>\n",
        "      <td>35.0</td>\n",
        "      <td>user@example.com</td>\n",
        "      <td>2020-01-01</td>\n",
@@ -370,7 +381,7 @@
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>38</td>\n",
-       "      <td>charlie</td>\n",
+       "      <td>Charlie</td>\n",
        "      <td>35.0</td>\n",
        "      <td>test@domain.com</td>\n",
        "      <td>2021-05-20</td>\n",
@@ -384,7 +395,7 @@
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>41</td>\n",
-       "      <td>alice</td>\n",
+       "      <td>Alice</td>\n",
        "      <td>35.0</td>\n",
        "      <td>user@example.com</td>\n",
        "      <td>2021-05-20</td>\n",
@@ -400,17 +411,17 @@
        "</div>"
       ],
       "text/plain": [
-       "   UserID     Name   Age             Email SignupDate  Signup_Year  Country  \\\n",
-       "0       1    david  35.0   test@domain.com 2021-05-20         2021   CANADA   \n",
-       "1       6      bob  40.0  user@example.com 2020-01-01         2020      USA   \n",
-       "2       9  charlie  35.0   test@domain.com 2020-01-01         2020  UNKNOWN   \n",
-       "3      13      eve  35.0  user@example.com 2022-03-15         2022      USA   \n",
-       "4      25      eve  40.0   test@domain.com 2021-05-20         2021      NAN   \n",
-       "5      29    alice  35.0  user@example.com 2020-01-01         2020   CANADA   \n",
-       "6      33    david  35.0  user@example.com 2021-05-20         2021   CANADA   \n",
-       "7      34    david  35.0  user@example.com 2020-01-01         2020       UK   \n",
-       "8      38  charlie  35.0   test@domain.com 2021-05-20         2021      USA   \n",
-       "9      41    alice  35.0  user@example.com 2021-05-20         2021   CANADA   \n",
+       "   UserID     Name   Age             Email Signup_Date  Signup_Year  Country  \\\n",
+       "0       1    David  35.0   test@domain.com  2021-05-20         2021   CANADA   \n",
+       "1       6      Bob  40.0  user@example.com  2020-01-01         2020      USA   \n",
+       "2       9  Charlie  35.0   test@domain.com  2020-01-01         2020  UNKNOWN   \n",
+       "3      13      Eve  35.0  user@example.com  2022-03-15         2022      USA   \n",
+       "4      25      Eve  40.0   test@domain.com  2021-05-20         2021      NAN   \n",
+       "5      29    Alice  35.0  user@example.com  2020-01-01         2020   CANADA   \n",
+       "6      33    David  35.0  user@example.com  2021-05-20         2021   CANADA   \n",
+       "7      34    David  35.0  user@example.com  2020-01-01         2020       UK   \n",
+       "8      38  Charlie  35.0   test@domain.com  2021-05-20         2021      USA   \n",
+       "9      41    Alice  35.0  user@example.com  2021-05-20         2021   CANADA   \n",
        "\n",
        "   Is_USA  Income_USD$  Subscribed     Notes  \n",
        "0   False      34872.0       False   Average  \n",
@@ -425,7 +436,7 @@
        "9   False      55515.0       False   Average  "
       ]
      },
-     "execution_count": 160,
+     "execution_count": 220,
      "metadata": {},
      "output_type": "execute_result"
     }
