--- a/DataCleaning.ipynb
+++ b/DataCleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 1,
    "id": "c06d4def",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 2,
    "id": "440f9153",
    "metadata": {},
    "outputs": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 3,
    "id": "4a567e57",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 4,
    "id": "19e55670",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 5,
    "id": "0e0ca18d",
    "metadata": {},
    "outputs": [],
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 6,
    "id": "43c60626",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 7,
    "id": "a15face2",
    "metadata": {},
    "outputs": [],
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 8,
    "id": "2e3ada4c",
    "metadata": {},
    "outputs": [],
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 9,
    "id": "fff774a1",
    "metadata": {},
    "outputs": [],
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 10,
    "id": "f37b366e",
    "metadata": {},
    "outputs": [],
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 11,
    "id": "ecf0e665",
    "metadata": {},
    "outputs": [],
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 12,
    "id": "5d35deda",
    "metadata": {},
    "outputs": [],
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 13,
    "id": "23339c7d",
    "metadata": {},
    "outputs": [],
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 14,
    "id": "416383c1",
    "metadata": {},
    "outputs": [],
@@ -199,13 +199,13 @@
     "### 11. Removing unnecessary rows\n",
     "df['Name'] = df['Name'].str.lower().str.strip()\n",
     "df['Email'] = df['Email'].str.lower().str.strip()\n",
-    "bad_rows = df[(~df['Email'].str.contains('@')) | (df['Name'] == 'unknown') | (~df['Email'].str.contains('.')) | (~df['Email'].str.contains(r'\\.(com|ru|ge|us)$'))].index\n",
+    "bad_rows = df[(~df['Email'].str.contains('@')) | (df['Name'] == 'unknown') | (~df['Email'].str.contains('.')) | (~df['Email'].str.contains(r'\\.(com|ge|us)$'))].index\n",
     "df = df.drop(index=bad_rows)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "0f226df4",
    "metadata": {},
    "outputs": [],
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "4aaba50d",
    "metadata": {},
    "outputs": [],
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 17,
    "id": "7890c8c8",
    "metadata": {},
    "outputs": [
@@ -436,7 +436,7 @@
        "9   False      55515.0       False   Average  "
       ]
      },
-     "execution_count": 220,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
